# Open-Dispatch

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL_METHODS.md  LICENSE  README.md  SECURITY.md  cli.py  docker-compose.yml  install.sh  mcp_server.py  profiles.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Formula/: open-dispatch.rb
adapters/: __init__.py  bluesky.py  discord.py  facebook.py  instagram.py  linkedin.py  telegram.py  threads.py  tiktok.py  twitter.py  youtube.py
ai/: __init__.py  caption_adapter.py
api/: app.py  queue.py  schema.py
docs/: DEMO_SCRIPT.md  HANDOFF.md  migrating-from-zernio.md
examples/: twitter_bluesky.json
landing/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/app/api-reference/: page.tsx
macos-app/OpenDispatch/: Package.swift
macos-app/OpenDispatch/Sources/OpenDispatch/: MenuBarView.swift  OpenDispatchApp.swift  ServerManager.swift  SettingsView.swift
macos-app/OpenDispatch/Sources/OpenDispatch/Resources/: Info.plist
media/: __init__.py  transcode.py
n8n-node/: README.md  package.json  tsconfig.json
n8n-node/credentials/: OpenDispatchApi.credentials.ts
n8n-node/nodes/OpenDispatch/: OpenDispatch.node.ts
scheduler/: worker.py
scripts/: make-dmg.sh
tests/: test_adapters.py  test_ai_caption.py  test_api.py  test_media_transcode.py  test_postgres_queue.py  test_queue.py  test_redis_queue.py  test_schema.py  test_threads_adapter.py  test_web.py
web/static/: style.css
web/templates/: _compose_result.html  _queue_table.html  base.html  compose.html  dashboard.html  health.html  profile_form.html  profiles.html  row_detail.html
